# last-shout

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  README.rst  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/: release-drafter.yml
.github/workflows/: build.yml  pypi.yml  pythonpackage.yml  testing.yml
last_shout/: __init__.py  main.py
last_shout/libshout/: lastfm.py  options.py  settings.py  twitter.py  utils.py
tests/: test_last_shout.py  test_libshout_options.py  test_libshout_settings.py  test_libshout_utils.py
