[tool.poetry]
name = "last-shout"
version = "0.9.0"
description = "Post Last.fm statistics to Twitter and/or Mastodon"
authors = ["Brian Pepple <bdpepple@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Brian Pepple <bdpepple@gmail.com>"]
readme = "README.rst"
packages = [
	{ include = "last_shout" },
]
include = [
    { path = "tests", format = "sdist" }
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords=["lastfm", "twitter", "python", "music", "mastodon"]

[tool.poetry.dependencies]
python = "^3.9"
"Mastodon.py" = "^1.5.1"
pylast = "^5.2.0"
pyxdg = "^0.28"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "^21.8b0"
tox = "^3.24.3"
pre-commit = "^2.15.0"
isort = "^5.9.3"
seed-isort-config = "^2.2.0"
flake8-builtins = "^1.5.3"

[tool.poetry.scripts]
last-shout = "last_shout.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/bpepple/last-shout"
"Bug Tracker" = "https://github.com/bpepple/last-shout/issues"

[tool.black]
line-length = 95
target-version = ["py37"] 

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 95
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["mastodon", "pylast", "twitter"]

[tool.coverage.run]
source = ["last_shout"]

[tool.coverage.report]
show_missing = true
