[tool.poetry]
name = "last-shout"
version = "0.9.1"
description = "Post Last.fm statistics to Twitter and/or Mastodon"
authors = ["Brian Pepple <bdpepple@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Brian Pepple <bdpepple@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "last_shout" },
]
include = [
    { path = "tests", format = "sdist" }
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
keywords=["lastfm", "twitter", "python", "music", "mastodon"]

[tool.poetry.dependencies]
python = "^3.11,<3.14"
"Mastodon.py" = "^2.1.3"
pylast = "^5.3.0"
pyxdg = "^0.28"
atproto = "^0.0.62"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^2.12.1"
flake8 = "^7.1.1"
tox = "^4.24.1"
pre-commit = "^4.1.0"
isort = "^6.0.0b2"
seed-isort-config = "^2.2.0"
flake8-builtins = "^2.5.0"
black = "^24.10.0"

[tool.poetry.scripts]
last-shout = "last_shout.main:main"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/bpepple/last-shout"
"Bug Tracker" = "https://github.com/bpepple/last-shout/issues"

[tool.black]
line-length = 95
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 95
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["atproto", "atproto_client", "atproto_core", "mastodon", "pylast", "xdg"]

[tool.coverage.run]
source = ["last_shout"]

[tool.coverage.report]
show_missing = true
